spacing and font corrections

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -67,27 +67,27 @@ h1 {
 }
 h2 {
   font-size: 40px;
-  line-height: 1.1;
+  line-height: 1.2;
   font-weight: 600;
 }
 h3 {
   font-size: 32px;
-  line-height: 1.1;
+  line-height: 1.2;
   font-weight: 500;
 }
 h4 {
   font-size: 24px;
-  line-height: 1.1;
+  line-height: 1.2;
   font-weight: 500;
 }
 h5 {
   font-size: 16px;
-  line-height: 1.1;
+  line-height: 1.2;
   font-weight: 400;
 }
 h6 {
   font-size: 12px;
-  line-height: 1.1;
+  line-height: 1.2;
   font-weight: 400;
 }
 
@@ -648,7 +648,7 @@ section .row {
   /* background: linear-gradient(180.05deg, #06283D 0.04%, rgba(20, 60, 88, 0.79) 99.95%); */
   background-image: url(../img/contact/con-2.png);
   overflow: hidden;
-  padding: 112px 0 0px 0;
+  padding: 80px 0 0px 0;
   color: #eee;
   font-size: 14px;
   position: relative;
@@ -703,7 +703,7 @@ section .row {
   margin-left: 10px;
 }
 footer .container {
-  max-width: 1280;
+  max-width: 1280px;
   margin: auto;
   width: 90%;
 }
@@ -813,12 +813,6 @@ footer .container .row {
 /* font responsive */
 
 @media (max-width: 768px) {
-  #main_tag .container{
-    width: 100%;
-  }
-  #header .container{
-    width: 100%;
-  }
   #header #logo img{
     width: 80%;
   }
@@ -855,5 +849,16 @@ footer .container .row {
   .section_spacing{
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+}
+@media (max-width: 768px) {
+  #main_tag .container{
+    width: 95%;
+  }
+  #header .container{
+    width: 95%;
+  }
+  footer .container{
+    width: 95%;
   }
 }
