--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,12 +5,14 @@
     width: 100%;
     overflow: hidden;
     position: relative;
+    /* background: linear-gradient(rgb(0, 57, 94) 0%, rgb(0, 24, 40) 100%); */
     background: url(/assets/img/Digital-Twin-Software-From-Data-Management-to-Data-Visualization-the-Next-Phase-of-Digitalization.webp) no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 125px 0px;
 }
 
 @media (min-width: 1024px) {
@@ -123,7 +125,9 @@
         font-size: 16px;
     }
 }
-
+#hero .Book-btn{
+    border-color: #fff;
+}
 #hero .Book-btn:hover {
     border: 2px solid #fff;
     color: #fff;
@@ -315,7 +319,10 @@
 }
 
 /* new design css */
-
+#what_is_clonos .row .content_wrapper{
+    width: 45%;
+    margin-left: auto;
+}
 #our_solutions {
     background-color: #f6f9fc;
     /* background: url(/assets/img/dot_pattern.svg) no-repeat;
@@ -337,13 +344,16 @@
     width: 100%;
     height: 100%;
 }
-
+#our_solutions .solution_wrapper .row .content_wrapper{
+    width: 90%;
+}
 #our_solutions .solution_wrapper .row:nth-child(odd) .content_wrapper {
-    padding-left: 30px;
+    margin-left: auto;
+    padding-right: 2rem;
 }
 
 #our_solutions .solution_wrapper .row:nth-child(even) .content_wrapper {
-    padding-right: 30px;
+    margin-right: auto;
 }
 
 #our_solutions .card_wrapper {
@@ -421,7 +431,7 @@
 
 #what_is_clonos .content_wrapper p {
     opacity: 0.7;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 #what_is_clonos .img_wrapper {
@@ -449,8 +459,13 @@
     width: 100%;
 }
 
-@media (max-width:768px) {
+@media (max-width:991px) {
     #what_is_clonos.section_spacing{
         padding-bottom: 0;
+    }
+    #what_is_clonos .row .content_wrapper,
+    #our_solutions .solution_wrapper .row:nth-child(odd) .content_wrapper,
+    #our_solutions .solution_wrapper .row:nth-child(even) .content_wrapper{
+        width: 100%;
     }
 }
