--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,25 +1,39 @@
-#product_hero, #products_facts, #products_challenges{
+#product_hero,
+#products_facts,
+#products_challenges {
     /* background-color: #06283d; */
     position: relative;
 
 }
-#product_hero{
+
+#product_hero {
     background: linear-gradient(rgb(0, 57, 94) 0%, rgb(0, 24, 40) 100%);
 }
-#product_hero .content_wrapper{
+
+#product_hero .content_wrapper {
     width: 85%;
     margin-left: 0;
 }
-#product_hero .content_wrapper h1{
+
+#product_hero .content_wrapper h1 {
     /* color: #06283d; */
     color: #fff;
 }
-#product_hero .content_wrapper p{
+
+#product_hero .content_wrapper p {
     /* color: #000; */
     color: #fff;
     opacity: 0.7;
 }
-#products_facts::before{
+
+#products_facts h2 {
+    background: linear-gradient(180deg, #2b4e86 0%, #D24B5A 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#products_facts::before {
     content: "";
     position: absolute;
     bottom: 0px;
@@ -28,8 +42,13 @@
     background: radial-gradient(rgb(43 78 134) 1%, transparent 76%);
 }
 
-#products_facts{
-    /* background: linear-gradient(220deg, rgba(110, 160, 203, 0.3) 6.78%, rgba(216, 223, 228, 0) 102.94%), rgb(255, 255, 255) */
+/* #D24B5A
+#2b4e86 */
+#products_challenges h2 {
+    background: linear-gradient(180deg, #2b4e86 0%, #D24B5A 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #products_challenges .card_wrapper {
@@ -46,27 +65,35 @@
     border-radius: 24px;
     background-color: #fff;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 0 27.17px 0 rgba(0,0,0,.09);
+    box-shadow: 0 0 27.17px 0 rgba(0, 0, 0, .09);
 }
-#products_challenges .card_wrapper .challenge_cards h4{
+
+#products_challenges .card_wrapper .challenge_cards h4 {
     position: relative;
     /* color: #f3791c; */
 }
-#products_challenges .card_wrapper .challenge_cards p{
+
+#products_challenges .card_wrapper .challenge_cards p {
     margin-bottom: 0;
     color: #4A4A68;
 }
 
 
-#products_solutions{
+#products_solutions h2 {
+    background: linear-gradient(180deg, #2b4e86 0%, #D24B5A 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     /* background: linear-gradient(220deg, rgba(110, 160, 203, 0.3) 6.78%, rgba(216, 223, 228, 0) 102.94%), rgb(255, 255, 255) */
     /* background: linear-gradient(rgb(0, 57, 94) 0%, rgb(0, 24, 40) 100%); */
 }
-#products_solutions .content_wrapper{
+
+#products_solutions .content_wrapper {
     width: 70%;
     margin: auto;
     text-align: center;
 }
+
 #products_solutions .card_wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -81,19 +108,23 @@
     min-height: 185px;
     padding: 30px;
     border-radius: 20px;
+    /* background: linear-gradient(180deg, #2b4e86 0%, #D24B5A 100%); */
     background: linear-gradient(180deg, rgba(110, 160, 203, 0.3) 6.78%, rgba(216, 223, 228, 0) 102.94%), rgb(255, 255, 255);
     /* background-color: #fff; */
     /* border: 1px solid rgba(255, 255, 255, 0.2); */
     /* box-shadow: 0px 0px 1.5965277777777778vw 0px rgba(0, 0, 0, 0.09); */
 }
-#products_solutions .card_wrapper .solution_cards h4{
+
+#products_solutions .card_wrapper .solution_cards h4 {
     position: relative;
 }
-#products_solutions .card_wrapper .solution_cards p{
+
+#products_solutions .card_wrapper .solution_cards p {
     margin-bottom: 0;
     color: #4A4A68;
 }
-#products_solutions .card_wrapper .solution_cards h4::before{
+
+#products_solutions .card_wrapper .solution_cards h4::before {
     content: "";
     position: absolute;
     top: 0;
@@ -106,17 +137,19 @@
 }
 
 #management_system .left_sec,
-#compliance .left_sec{
+#compliance .left_sec {
     width: 45%;
     margin-right: auto;
 }
-#proactive_management .right_sec{
+
+#proactive_management .right_sec {
     width: 45%;
     margin-left: auto;
 }
+
 #management_system .list_points ul,
 #proactive_management .list_points ul,
-#compliance .list_points ul{
+#compliance .list_points ul {
     list-style: none;
     margin-left: 0;
     padding-left: 0;
@@ -125,52 +158,75 @@
 
 #management_system .list_points ul li,
 #proactive_management .list_points ul li,
-#compliance .list_points ul li{
+#compliance .list_points ul li {
     display: flex;
     gap: 1rem;
     margin-bottom: 1.5rem;
 }
+
 #management_system .list_points ul li p,
 #proactive_management .list_points ul li p,
-#compliance .list_points ul li p{
+#compliance .list_points ul li p {
     margin-bottom: 0;
     font-size: 20px;
     line-height: 24px;
 }
 
+#management_system h2,
+#proactive_management h2,
+#compliance h2 {
+    background: linear-gradient(180deg, #2b4e86 0%, #D24B5A 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 /* responsive */
 
 @media (max-width: 991px) {
-    #products_challenges .card_wrapper, #products_solutions .card_wrapper{
+
+    #products_challenges .card_wrapper,
+    #products_solutions .card_wrapper {
         grid-template-columns: repeat(2, 1fr);
     }
-    #management_system .left_sec, #compliance .left_sec{
+
+    #management_system .left_sec,
+    #compliance .left_sec {
         width: 100%;
         padding-bottom: 2rem;
     }
-    #proactive_management .row{
+
+    #proactive_management .row {
         flex-direction: column-reverse;
     }
-    #proactive_management .right_sec{
+
+    #proactive_management .right_sec {
         width: 100%;
         padding-bottom: 2rem;
     }
 }
 
-@media (max-width: 650px){
-    #product_hero .content_wrapper{
+@media (max-width: 650px) {
+    #product_hero .content_wrapper {
         width: 100%;
     }
-    #products_challenges .card_wrapper, #products_solutions .card_wrapper{
+
+    #products_challenges .card_wrapper,
+    #products_solutions .card_wrapper {
         grid-template-columns: repeat(1, 1fr);
     }
-    #products_solutions .content_wrapper{
+
+    #products_solutions .content_wrapper {
         width: 100%;
     }
-    #products_solutions .card_wrapper .solution_cards h4::before{
+
+    #products_solutions .card_wrapper .solution_cards h4::before {
         top: -3px;
     }
-    #management_system .list_points ul li p, #proactive_management .list_points ul li p, #compliance .list_points ul li p{
+
+    #management_system .list_points ul li p,
+    #proactive_management .list_points ul li p,
+    #compliance .list_points ul li p {
         font-size: 1rem;
     }
 }
